--- a/index.html
+++ b/index.html
@@ -563,12 +563,12 @@
                                 <h3 class="connect-heading">Follow Me <i class='bx  bx-like' style='color:#d308be'></i>
                                 </h3>
                                 <div class="social-icons">
-                                    <a href="https://www.facebook.com/edmar.tangapa.1"><i
+                                    <a href="https://www.facebook.com/edmar.tangapa.1" target="_blank"><i
                                             class='bx bxl-facebook'></i></a>
-                                    <a href="https://github.com/Mareedd"><i class='bx bxl-github'></i></a>
-                                    <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"><i
+                                    <a href="https://github.com/Mareedd" target="_blank"><i class='bx bxl-github'></i></a>
+                                    <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank"><i
                                             class='bx bxl-gmail'></i></a>
-                                    <a href="https://www.messenger.com/e2ee/t/9569440496425533"><i
+                                    <a href="https://www.messenger.com/e2ee/t/9569440496425533" target="_blank"><i
                                             class='bx bxl-messenger'></i></a>
                                 </div>
 
