--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="home-container">
             <div class="media-icons">
                 <a href="https://www.facebook.com/edmar.tangapa.1" target="_blank"><i class='bx bxl-facebook'></i></a>
-                <a href="https://github.com/Mareedd" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://github.com/EdmarMabajen2005" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank"><i
                         class='bx bxl-gmail'></i></a>
                 <a href="https://www.messenger.com/e2ee/t/9569440496425533" target="_blank"><i
@@ -565,7 +565,7 @@
                                 <div class="social-icons">
                                     <a href="https://www.facebook.com/edmar.tangapa.1" target="_blank"><i
                                             class='bx bxl-facebook'></i></a>
-                                    <a href="https://github.com/Mareedd" target="_blank"><i class='bx bxl-github'></i></a>
+                                    <a href="https://github.com/EdmarMabajen2005" target="_blank"><i class='bx bxl-github'></i></a>
                                     <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank"><i
                                             class='bx bxl-gmail'></i></a>
                                     <a href="https://www.messenger.com/e2ee/t/9569440496425533" target="_blank"><i
