--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="https://github.com/EdmarMabajen2005" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank"><i
                         class='bx bxl-gmail'></i></a>
-                <a href="https://www.messenger.com/e2ee/t/9569440496425533" target="_blank"><i
+                <a href="https://m.me/edmar.tangapa.1?hash=AbbHdzJMZWjlqIUE&source=qr_link_share" target="_blank"><i
                         class='bx bxl-messenger'></i></a>
             </div>
 
@@ -568,7 +568,7 @@
                                     <a href="https://github.com/EdmarMabajen2005" target="_blank"><i class='bx bxl-github'></i></a>
                                     <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank"><i
                                             class='bx bxl-gmail'></i></a>
-                                    <a href="https://www.messenger.com/e2ee/t/9569440496425533" target="_blank"><i
+                                    <a href="https://m.me/edmar.tangapa.1?hash=AbbHdzJMZWjlqIUE&source=qr_link_share" target="_blank"><i
                                             class='bx bxl-messenger'></i></a>
                                 </div>
 
