--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <div class="project-card">
                 <div class="project-vidbox">
                     <video controls controlsList="nodownload" oncontextmenu="return false" id="projectVideo1"
-                        src="./video/video1.mp4" type="video/mp4" controls></video>
+                        src="./video/video1.mp4" type="video/mp4" controls autoplay loop muted></video>
                     <div class="hover-sign"></div>
                 </div>
                 <div class="project-info">
@@ -271,7 +271,7 @@
             <div class="project-card">
                 <div class="project-vidbox">
                     <video controls controlsList="nodownload" oncontextmenu="return false" id="projectVideo2"
-                        src="./video/video-project2.mp4" type="video/mp4" controls></video>
+                        src="./video/video-project2.mp4" type="video/mp4" controls autoplay loop muted></video>
                 </div>
                 <div class="project-info">
                     <h1>2D Animation Project</h1>
@@ -287,7 +287,7 @@
             <div class="project-card">
                 <div class="project-vidbox">
                     <video controls controlsList="nodownload" oncontextmenu="return false" id="projectVideo3"
-                        src="./video/rec.mp4" type="video/mp4" controls></video>
+                        src="./video/rec.mp4" type="video/mp4" controls autoplay loop muted></video>
                 </div>
                 <div class="project-info">
                     <h1>Canva Layout Designs</h1>
